# scc_madness

./: .gitignore  Cargo.toml  Makefile  Manifest.toml  Project.toml  README.md  assignment.md
assets/: mine.mtx
libs/: mmio.c
rust_vs_c_report/: Makefile  bibliography.ref  config.ms  scc_rust_vs_c.ms
rust_vs_c_report/data/: opencilk_32.d  rust_32.d  times.d
src/: csx.c  csx.h  csx.rs  evil_pointer.rs  fifo.c  fifo.h  graph.c  graph.h  graph.rs  lib.rs  main.c  main.rs  node.c  node.h  scc_madness.jl  stack.c  stack.h  utils.c  utils.h
src/graph/: parallel.rs  serial.rs  unsafe_par.rs
tests/: test_small_matricies.rs
