[package]
name = "scc_madness"
version = "0.1.0"
description = "Strongly Connected Components coloring algorithm"
authors = ["John Stef <john@johnstef.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.3", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.17"
rayon = "1.7.0"
